fixed responsiveness for about page on mobile screens

--- a/styles/valmarino-app.css
+++ b/styles/valmarino-app.css
@@ -193,6 +193,9 @@ h1 {
   }
   .container-fluid-content {
     margin-bottom: 70px;
-    padding-top: 200px;
+    padding-top: 90px;
+  }
+  #profile-img {
+    max-width: 210px;
   }
 }
